RESOLVED FIXED307964
[YARR] Fix false negative matching Unicode regexp with inverted character class
https://bugs.webkit.org/show_bug.cgi?id=307964
Summary [YARR] Fix false negative matching Unicode regexp with inverted character class
Sosuke Suzuki
Reported 2026-02-15 19:15:45 PST
...
Attachments
Sosuke Suzuki
Comment 1 2026-02-15 19:17:46 PST
EWS
Comment 2 2026-02-15 22:39:19 PST
Committed 307639@main (6219e9ebc052): <https://commits.webkit.org/307639@main> Reviewed commits have been landed. Closing PR #58772 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-15 22:40:14 PST
Note You need to log in before you can comment on or make changes to this bug.